# docs/spec/openapi.yaml
@@ -486,7 +486,6 @@ paths:
                           - engine: JQ
                             implementation: >-
                               { success: .actor.name | contains('Dupont') }
-                  attesterID: attester-0000
                   data:
                     actor:
                       name: Jean Dupont
@@ -784,7 +783,7 @@ components:
       enum: [SCHEMA, GREAT_EXPECTATIONS, JQ]
     VeracityRequest:
       type: object
-      required: [exchangeID, contract, data]
+      required: [exchangeID, contract, data, vlaID]
       properties:
         exchangeID:
           type: string
@@ -800,6 +799,9 @@ components:
               $ref: https://raw.githubusercontent.com/bitol-io/open-data-contract-standard/refs/heads/main/schema/odcs-json-schema-latest.json
         data:
           $ref: '#/components/schemas/AnyValue'
+        vlaID:
+          type: string
+          example: 14bd2062-0ffc-4b83-830b-aaa9aa1a1ca3
       example:
         exchangeID: xchg-0001
         contract:
@@ -866,14 +868,9 @@ components:
           result:
             success: true
           timestamp: '2025-03-16T03:25:00Z'
-        attesterID: attester-0000
     AttestationRequest:
       allOf:
         - $ref: '#/components/schemas/VeracityRequest'
-      required: [attesterID]
-      properties:
-        attesterID:
-          type: string
     ProofRequest:
       allOf:
         - $ref: '#/components/schemas/VeracityRequest'
